--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -170,18 +170,18 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Application</h2>
+        <h2 class="title is-3">Workflow</h2>
         <div class="content has-text-justified">
+          <img src="./images/workflow.png" class="center">
           <p>
-            You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
-            This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
-            more information about this you can find <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
+            The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
+            initial binarization ground-truth generation, verification, and manual correction. 
+            The initial binarization ground-truth was generated using the method of Ju et al. [2], 
+            while the verification was conducted by the trained Kuzushiji expert.
           </p>
-          <img src="./images/application.png" class="center">
         </div>
       </div>
     </div>
-    <!--/ Application. -->
   </div>
 </section>
 
@@ -200,17 +200,6 @@
             [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
             Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
           </p>
-            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
-          </p>
-          <p>
-            [Chien et al. 2024a] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
-            YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
-          </p>
-          <p>
-            [Chien et al. 2024b] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. arXiv preprint.
-          </p>
         </div>
       </div>
     </div>
@@ -220,42 +209,7 @@
     <strong>If you use our split dataset, please cite some of the papers below:</strong>
     
     <pre><code>
-  @article{ju2023fracture,
-    title={Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm},
-    author={Ju, Rui-Yang and Cai, Weiming},
-    journal={Scientific Reports},
-    volume={13},
-    number={1},
-    pages={20077},
-    year={2023}
-  }
-    
-  @article{chien2024yolov9,
-    title={YOLOv9 for fracture detection in pediatric wrist trauma X-ray images},
-    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Chiang, Jen-Shiun},
-    journal={Electronics Letters},
-    volume={60},
-    number={11},
-    pages={e13248},
-    year={2024}
-  }
 
-  @article{chien2025yolov8,
-    title={YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection},
-    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Xieerke, Enkaer and Chiang, Jen-Shiun},
-    journal={IEEE Access},
-    volume={13},
-    pages={52461-52477},
-    year={2025},
-    publisher={IEEE}
-  }
-
-  @article{ju2024pediatric,
-    title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
-    author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
-    journal={arXiv preprint arXiv:2410.01031},
-    year={2024}
-  }
     </code></pre>
   </div>
 </section>
