--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -151,7 +151,7 @@
         <h2 class="title is-3">Challenge</h2>
         <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge1.png" class="center">
+          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:60%; max-width:600px;">
           <p>
             Challenging examples for the text and seal detection task: 
             The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
@@ -159,7 +159,7 @@
         </div>
         <h2 class="title is-5">Track 2: Document Binarization</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge2.png" class="center">
+          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:60%; max-width:600px;">
           <p>
             Challenging examples for the document binarization task: 
             The left column shows the original images, while the right column presents the corresponding binarized images.
