--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -128,10 +128,12 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
-          <img src="./images/teaser.png" class="center">
-          <h5 class="subtitle has-text-centered" style="margin-top: 15px">
-            DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. Based on the dataset, we define two benchmark tracks: Text and Seal Detection and Document Binarization.
-          </h5>
+          <div class="content has-text-centered" style="margin-bottom: 2rem;">
+            <img src="./images/teaser.png" class="center">
+            <h5 class="subtitle has-text-centered" style="margin-top: 15px">
+              DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. Based on the dataset, we define two benchmark tracks: Text and Seal Detection and Document Binarization.
+            </h5>
+          </div>
         </div>
         <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified">
