Improve image display style in index.html
Updated image styling for better responsiveness.

--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -174,7 +174,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Workflow</h2>
         <div class="content has-text-justified">
-          <img src="./images/workflow.png" class="center">
+          <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
           <p>
             The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
             initial binarization ground-truth generation, verification, and manual correction. 
