--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -128,14 +128,14 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered" style="margin-bottom: 6rem;">
-            <img src="./images/teaser.png" class="center">
+            <img src="./images/teaser.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
             <h5 class="subtitle has-text-centered" style="margin-top: 15px">
               DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. Based on the dataset, we define two benchmark tracks: Text and Seal Detection and Document Binarization.
             </h5>
         </div>
         <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified">
-          <img src="./images/motivation.png" class="center">
+          <img src="./images/motivation.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
           <p>
             Within ancient Japanese documents, seals appear as red marks that frequently overlap with Kuzushiji characters.
             This overlap can blur character boundaries and significantly reduce OCR accuracy. 
@@ -151,7 +151,7 @@
         <h2 class="title is-3">Challenge</h2>
         <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:60%; max-width:600px;">
+          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
           <p>
             Challenging examples for the text and seal detection task: 
             The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
@@ -159,7 +159,7 @@
         </div>
         <h2 class="title is-5">Track 2: Document Binarization</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:60%; max-width:600px;">
+          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
           <p>
             Challenging examples for the document binarization task: 
             The left column shows the original images, while the right column presents the corresponding binarized images.
