--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -136,7 +136,7 @@
         </div>
         <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified">
-          <img src="./images/motivation.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
+          <img src="./images/motivation.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Within ancient Japanese documents, seals appear as red marks that frequently overlap with Kuzushiji characters.
             This overlap can blur character boundaries and significantly reduce OCR accuracy. 
@@ -152,7 +152,7 @@
         <h2 class="title is-3">Challenge</h2>
         <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
+          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Challenging examples for the text and seal detection task: 
             The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
@@ -160,7 +160,7 @@
         </div>
         <h2 class="title is-5">Track 2: Document Binarization</h2>
         <div class="content has-text-justified">
-          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
+          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Challenging examples for the document binarization task: 
             The left column shows the original images, while the right column presents the corresponding binarized images.
@@ -173,7 +173,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Workflow</h2>
         <div class="content has-text-justified">
-          <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%; max-width:600px;">
+          <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
           <p>
             The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
             initial binarization ground-truth generation, verification, and manual correction. 
