--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -151,7 +151,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Challenge</h2>
         <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
-        <div class="content has-text-justified">
+        <div class="content has-text-centered" style="margin-bottom: 6rem;">
           <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Challenging examples for the text and seal detection task: 
@@ -159,7 +159,7 @@
           </p>
         </div>
         <h2 class="title is-5">Track 2: Document Binarization</h2>
-        <div class="content has-text-justified">
+        <div class="content has-text-centered" style="margin-bottom: 6rem;">
           <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Challenging examples for the document binarization task: 
@@ -172,7 +172,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Workflow</h2>
-        <div class="content has-text-justified">
+        <div class="content has-text-centered" style="margin-bottom: 6rem;">
           <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
           <p>
             The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
