--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -194,12 +194,14 @@
         <!-- Prop. -->
         <div class="content has-text-justified">
           <p>
-            [Nagy et al. 2022] Eszter Nagy, Michael Janisch, Franko Hržić, Erich Sorantin, Sebastian Tschauner. 2022.
-            A pediatric wrist trauma X-ray dataset (GRAZPEDWRI-DX) for machine learning. Scientific Data.
+            [Clanuwat et al. 2022] Clanuwat, Tarin, and Asanobu Kitamoto. 
+            `miwo' AI Kuzushiji Recognition Application for Document Examination.
+            Proceeding of IPSJ Humanities and Computer Symposium. 2021.
           </p>
           <p>
-            [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
-            Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
+            [Ju et al. 2024] Rui-Yang Ju, Yu-Shian Lin, Yanlin Jin, Chih-Chia Chen, Chun-Tse Chien, Jen-Shiun Chiang.
+            Three-stage binarization of color document images based on discrete wavelet transform and generative adversarial networks. 
+            Knowledge-Based Systems. 2024.
           </p>
         </div>
       </div>
