--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -141,7 +141,7 @@
             Within ancient Japanese documents, seals appear as red marks that frequently overlap with Kuzushiji characters.
             This overlap can blur character boundaries and significantly reduce OCR accuracy. 
             From left to right, the observed OCR errors include: recognition of extra characters, incorrect character recognition, and misidentification of seal carvings as text. 
-            OCR was conducted using the “miwo” application [1], and binarization was performed according to the method proposed by Ju et al. [2].
+            OCR was conducted using the “miwo” application [Clanuwat et al. 2022], and binarization was performed according to the method proposed by [Ju et al. 2024].
           </p>
         </div>
       </div>
