--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -177,7 +177,7 @@
           <p>
             The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
             initial binarization ground-truth generation, verification, and manual correction. 
-            The initial binarization ground-truth was generated using the method of Ju et al. [2], 
+            The initial binarization ground-truth was generated using the method of [Ju et al. 2024], 
             while the verification was conducted by the trained Kuzushiji expert.
           </p>
         </div>
