--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -172,7 +172,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Workflow</h2>
-        <div class="content has-text-justified" style="margin-bottom: 6rem;">
+        <div class="content has-text-justified">
           <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
           <p>
             The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
