--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -61,10 +61,10 @@
           <h1 class="title is-3 publication-title" style="font-weight: 600;">DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://ruiyangju.github.io/" style="margin-right: 20px;">Rui-Yang Ju</a>
-              <a href="https://hkmk.github.io/" style="margin-right: 20px;">Hirotaka Kameko</a>
-              <span style="margin-right: 20px;">Kohei Yamashita</span>
-              <a href="https://www.lsta.media.kyoto-u.ac.jp/mori/author/" style="margin-right: 20px;">Shinsuke Mori</a>
+              <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
+              <a href="https://hkmk.github.io/">Hirotaka Kameko</a>,
+              <span>Kohei Yamashita</span>,
+              <a href="https://www.lsta.media.kyoto-u.ac.jp/mori/author/">Shinsuke Mori</a>
             </span>
           </div>
 
