--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -131,7 +131,7 @@
           <img src="./images/teaser.png">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
             DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. 
-            Based on the dataset, we define two benchmark tracks: Text and Seal Detection and Document Binarization.
+            Based on the dataset, we define two benchmark tracks: (1) Text and Seal Detection, and (2) Document Binarization.
           </h5>
         </div>
         <h2 class="title is-3">Motivation</h2>
