--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -61,16 +61,15 @@
           <h1 class="title is-3 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://ruiyangju.github.io/" style="margin-right: 20px;">Rui-Yang Ju</a>
-              <span style="margin-right: 20px;">Sheng-Yen Huang</span>
+              <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
+              <span>Sheng-Yen Huang</span>,
               <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>
             </span>
           </div>
 
-          <div class="is-size-6 publication-authors" style="margin-top: 1em;">
+          <div class="is-size-5 publication-authors" style="margin-top: 1em;">
             <span class="author-block">
-              Graduate Institute of Networking and Multimedia<br>
-              National Taiwan University
+              Graduate Institute of Networking and Multimedia, National Taiwan University
             </span>
           </div>
 
