--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -149,8 +149,7 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Challenge</h2>
-        <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
+        <h2 class="title is-3">Challenges in Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
           <p>
@@ -158,7 +157,7 @@
             The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
           </p>
         </div>
-        <h2 class="title is-5">Track 2: Document Binarization</h2>
+        <h2 class="title is-3">Challenges in Track 2: Document Binarization</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
           <p>
