--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -208,7 +208,7 @@
 
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <strong>If you use our split dataset, please cite some of the papers below:</strong>
+    <strong>If you use our dataset, please cite the paper below:</strong>
     
     <pre><code>
 
