--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -161,8 +161,9 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            Challenging examples for the document binarization task: 
-            The left column shows the original images, while the right column presents the corresponding binarized images.
+            Text and seal detection serves as a crucial preliminary step for subsequent Kuzushiji OCR and seal analysis. 
+            However, this task is challenging because seals may (a) appear with faint ink or (b) overlap with Kuzushiji characters or other seals, 
+            which often leads to reduced detection accuracy.
           </p>
         </div>
       </div>
