--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -153,17 +153,18 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            Challenging examples for the text and seal detection task: 
-            The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
+            Text and seal detection serves as a crucial preliminary step for subsequent Kuzushiji OCR and seal analysis. 
+            However, this task is challenging because seals may (a) appear with faint ink or (b) overlap with Kuzushiji characters or other seals, 
+            which often leads to reduced detection accuracy.
           </p>
         </div>
         <h2 class="title is-3">Challenges in Track 2: Document Binarization</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            Text and seal detection serves as a crucial preliminary step for subsequent Kuzushiji OCR and seal analysis. 
-            However, this task is challenging because seals may (a) appear with faint ink or (b) overlap with Kuzushiji characters or other seals, 
-            which often leads to reduced detection accuracy.
+            Document binarization aims to improve the accuracy of downstream OCR systems. 
+            In this task, the objective is to remove seals while preserving, or even restoring, Kuzushiji characters as much as possible. 
+            This process becomes particularly challenging when the Kuzushiji characters overlap with seals.
           </p>
         </div>
       </div>
