--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -176,10 +176,9 @@
         <div class="content has-text-justified">
           <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            The overall workflow of the proposed DKDS dataset construction, including detection annotations, 
-            initial binarization ground-truth generation, verification, and manual correction. 
-            The initial binarization ground-truth was generated using the method of [Ju et al. 2024], 
-            while the verification was conducted by the trained Kuzushiji expert.
+              The overall workflow for constructing the proposed DKDS dataset includes detection annotations, initial binarization ground-truth generation, verification, and manual correction. 
+              For detection annotations, bounding box information for Kuzushiji characters was sourced from the OCR annotations provided by CODH [国文学研究資料館], while bounding boxes for the seals were recorded during the process of randomly adding them to the Kuzushiji document images.
+              The initial binarization ground-truth was generated following the method of [Ju et al., 2024], and verification was performed by a trained Kuzushiji expert.
           </p>
         </div>
       </div>
