--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -203,6 +203,9 @@
             Three-stage binarization of color document images based on discrete wavelet transform and generative adversarial networks. 
             Knowledge-Based Systems. 2024.
           </p>
+          <p>
+            [国文学研究資料館] 国文学研究資料館. 日本古典籍くずし字データセット. https://doi.org/10.20676/00000340.
+          </p>
         </div>
       </div>
     </div>
