--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -138,10 +138,10 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/motivation.png" style="display:block; margin:0 auto; width:80%">
           <p>
-            Within ancient Japanese documents, seals appear as red marks that frequently overlap with Kuzushiji characters.
-            This overlap can blur character boundaries and significantly reduce OCR accuracy. 
+            In ancient Japanese documents, seals often appear as red marks that overlap with Kuzushiji characters. 
+            Such overlap can blur characters and substantially reduce OCR accuracy.
             From left to right, the observed OCR errors include: recognition of extra characters, incorrect character recognition, and misidentification of seal carvings as text. 
-            OCR was conducted using the “miwo” application [Clanuwat et al. 2021], and binarization was performed according to the method proposed by [Ju et al. 2024].
+            OCR was conducted using the “miwo” application [Clanuwat et al. 2021].
           </p>
         </div>
       </div>
@@ -197,11 +197,6 @@
             [Clanuwat et al. 2021] Clanuwat, Tarin, and Asanobu Kitamoto. 
             `miwo' AI Kuzushiji Recognition Application for Document Examination.
             Proceeding of IPSJ Humanities and Computer Symposium. 2021.
-          </p>
-          <p>
-            [Ju et al. 2024] Rui-Yang Ju, Yu-Shian Lin, Yanlin Jin, Chih-Chia Chen, Chun-Tse Chien, Jen-Shiun Chiang.
-            Three-stage binarization of color document images based on discrete wavelet transform and generative adversarial networks. 
-            Knowledge-Based Systems. 2024.
           </p>
           <p>
             [国文学研究資料館] 国文学研究資料館. 日本古典籍くずし字データセット. https://doi.org/10.20676/00000340.
