--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -84,6 +84,7 @@
                   <span>Paper</span>
                 </a>
               </span>
+              <!-- arXiv Link. -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/"
                    class="external-link button is-normal is-rounded is-dark">
@@ -130,7 +131,7 @@
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/teaser.png">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
-            DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. 
+            DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals.
             Based on the dataset, we define two benchmark tracks: (1) Text and Seal Detection, and (2) Document Binarization.
           </h5>
         </div>
@@ -140,7 +141,7 @@
           <p>
             In ancient Japanese documents, seals often appear as red marks that overlap with Kuzushiji characters. 
             Such overlap can blur characters and substantially reduce OCR accuracy.
-            From left to right, the observed OCR errors include: recognition of extra characters, incorrect character recognition, and misidentification of seal carvings as text. 
+            From left to right, the observed OCR errors include recognition of extra character, recognition of incorrect character, and misclassification of seal inscriptions as text.
             OCR was conducted using the “miwo” application [Clanuwat et al. 2021].
           </p>
         </div>
