--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -155,7 +155,7 @@
           <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Text and seal detection serves as a crucial preliminary step for subsequent Kuzushiji OCR and seal analysis. 
-            However, this task is challenging because seals may (a) appear with faint ink or (b) overlap with Kuzushiji characters or other seals, 
+            However, this task is challenging because seals may (a) suffer from ink fading or (b) overlap with Kuzushiji characters or other seals, 
             which often leads to reduced detection accuracy.
           </p>
         </div>
