--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -6,7 +6,7 @@
         content="DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization">
   <meta name="keywords" content="DKDS, Degraded Kuzushiji Documents with Seals Dataset, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization</title>
+  <title>DKDS: A Benchmark Dataset of <u>D</u>egraded <u>K</u>uzushiji <u>D</u>ocuments with <u>S</u>eals for Detection and Binarization</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
