--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -137,7 +137,7 @@
         </div>
         <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/motivation.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/errors.png" style="display:block; margin:0 auto; width:80%">
           <p>
             In ancient Japanese documents, seals often appear as red marks that overlap with Kuzushiji characters. 
             Such overlap can blur characters and substantially reduce OCR accuracy.
