--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -257,6 +257,18 @@
     year={2024}
   }
     </code></pre>
+    <strong>In addition, please cite the following original dataset:</strong>
+    <pre><code>
+  @article{nagy2022grazpedwri,
+    title={GRAZPEDWRI-DX},
+    author={Nagy, Eszter and Janisch, Michael and Hrzic, Franko and Sorantin, Erich and Tschauner, Sebastian},
+    journal={figshare},
+    year={2022},
+    month={4},
+    doi={10.6084/m9.figshare.14825193.v2},
+    url={https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193}
+  }          
+    </code></pre>
   </div>
 </section>
 
