--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -168,7 +168,7 @@
           </p>
           <p>
             [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
+            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. IEEE Access.
           </p>
           <p>
             [Chien et al. 2024a] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
