--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -129,7 +129,7 @@
             training, validation, and test. The sizes are approximately 70%, 20%, and 10% of the original dataset, respectively.
             Specifically, our training set consists of 14,204 images (69.88%), validation set of 4,094 
             images (20.14%), and test set of 2,029 images (9.98%). 
-            In subsequent studies [Ju et al. 2024][Chien et al. 2024a][Chien et al. 2024b], 
+            In subsequent studies [Ju et al. 2024][Chien et al. 2024][Chien et al. 2025], 
             we all followed this split.
           </p>
         </div>
@@ -168,15 +168,15 @@
           </p>
           <p>
             [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. IEEE Access.
+            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
           </p>
           <p>
-            [Chien et al. 2024a] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
+            [Chien et al. 2024] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
             YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
           </p>
           <p>
-            [Chien et al. 2024b] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. arXiv preprint.
+            [Chien et al. 2025] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2025.
+            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. IEEE Access.
           </p>
         </div>
       </div>
