--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -254,13 +254,11 @@
             This project is an independent derivative work and is <strong>not affiliated with or endorsed by the original dataset authors or their institutions</strong>.
           </p>
           <p>
-            This webpage template is adapted from 
-            <a href="https://github.com/nerfies/nerfies.github.io" target="_blank">Nerfies</a> 
-            and is licensed under 
-            <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
+            This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+            This webpage template is from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>. 
           </p>
           <p>
-            If you have any questions, please contact me via my <a href="https://ruiyangju.github.io/">homepage</a>.
+            If you have any questions, you can contact me via my <a href="https://ruiyangju.github.io/">homepage</a>.
           </p>
         </div>
       </div>
