--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -183,6 +183,7 @@
     </div>
 
   <div class="container is-max-desktop content">
+    <img src="./images/BY-SA.png" class="left"> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
     <h2 class="title">BibTeX</h2>
     <strong>If you use our split dataset, please cite the papers below:</strong>
 <pre><code>
