--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -183,7 +183,14 @@
     </div>
 
   <div class="container is-max-desktop content">
-    <img src="./images/BY-SA.png" class="left"> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+    <div class="license-block" style="margin-bottom: 1.5em;">
+      <img src=src="./images/CC-BY.png" alt="CC BY 4.0 License" style="vertical-align: middle;">
+      <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" style="margin-left: 8px;">
+        This work is licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0)
+      </a>
+  </div>
+  
+  <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <strong>If you use our split dataset, please cite the papers below:</strong>
 <pre><code>
