--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -142,7 +142,7 @@
         <div class="content has-text-justified">
           <p>
             You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
-            This website is hosted by Streamlit. In addition, we also designed a Graphical User Interface—details can be found 
+            This website is hosted by Streamlit. In addition, we also designed a Graphical User Interface, where details can be found 
             <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
           </p>
           <img src="./images/application.png" class="center">
