--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -186,7 +186,7 @@
       <div class="license-block" style="margin-bottom: 1.5em;">
         <img src="./images/CC-BY.png" alt="CC BY 4.0 License" style="vertical-align: middle;">
         <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" style="margin-left: 8px;">
-          This work is licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0)
+          This work is licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0).
         </a>
       </div>
     </div>
