--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -57,6 +57,7 @@
           </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">National Taiwan University</span>
+            <span class="author-block">2023</span>
           </div>
 
           <div class="column has-text-centered">
