--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -57,9 +57,11 @@
           </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">National Taiwan University</span>
+          </div>
+          <div class="is-size-5 publication-authors">
             <span class="author-block">2023</span>
           </div>
-
+          
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
