--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -209,9 +209,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <strong>If you use our dataset, please cite the paper below:</strong>
-    
     <pre><code>
 
+    </code></pre>
+    <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our modified dataset:</strong>
+    <pre><code>
+    『日本古典籍くずし字データセット』 （国文研所蔵／CODH加工） doi:10.20676/00000340      
     </code></pre>
   </div>
 </section>
