--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -186,6 +186,15 @@
     </div>
   </div>
 </section>
+  
+ <div class="container is-max-desktop content">
+  <div class="license-block" style="margin-bottom: 1.5em;">
+    <img src="./images/CC-BY-SA.png" alt="CC BY-SA 4.0 License" style="vertical-align: middle;">
+    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" style="margin-left: 8px;">
+      This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0).
+    </a>
+  </div>
+</div>
 
 <section class="section">
   <div class="container is-max-desktop">
