--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -257,7 +257,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website and dataset split are based on <strong>GRAZPEDWRI-DX</strong> [Nagy et al., 2022], 
+            This split dataset is based on <strong>GRAZPEDWRI-DX</strong> [Nagy et al., 2022], 
             which is licensed under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
             Creative Commons Attribution 4.0 International License (CC BY 4.0)</a>.
           </p>
