--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -234,13 +234,22 @@
       <div class="column is-8">
         <div class="content">
           <p>
+            The original Kuzushiji dataset used in this work is based on the <strong>『日本古典籍くずし字データセット』</strong> （国文研所蔵／CODH加工）,
+            which is licensed under the<a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
+          </p>
+
+          <p>
+            All modifications were performed by <strong>Rui-Yang Ju</strong>. 
+            This is an independent derivative work and is <strong>not affiliated with or endorsed by the original Kuzushiji dataset authors or their institutions</strong>. 
+          </p>
+          
+          <p>
             This website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
             This webpage template is from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>. 
           </p>
           <p>
             If you have any questions, you can contact me via my <a href="https://ruiyangju.github.io/">homepage</a>.
           </p>
-          
         </div>
       </div>
     </div>
@@ -249,3 +258,4 @@
 
 </body>
 </html>
+
