--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -234,7 +234,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            The original Kuzushiji dataset used in this work is based on the <strong>『日本古典籍くずし字データセット』</strong> （国文研所蔵／CODH加工）,
+            The original Kuzushiji dataset used in this work is based on the <strong>『日本古典籍くずし字データセット』</strong> （国文研所蔵／CODH加工）, provided by <a href="https://codh.rois.ac.jp/">ROIS-DS人文学オープンデータ共同利用センター(CODH)</a>
             which is licensed under the<a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
           </p>
 
