--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -173,7 +173,7 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Workflow</h2>
+        <h2 class="title is-3">Workflow of The Dataset Construction</h2>
         <div class="content has-text-justified">
           <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
           <p>
