--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -191,9 +191,7 @@
   <div class="container is-max-desktop content">
     <div class="license-block" style="margin-bottom: 1.5em;">
       <img src="./images/CC-BY-SA.png" alt="CC BY-SA 4.0 License" style="vertical-align: middle;">
-      <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" style="margin-left: 8px;">
-        This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0).
-      </a>
+      This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" style="margin-left: 8px;">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
     </div>
   </div>
   
@@ -221,7 +219,7 @@
   <pre><code>
 
   </code></pre>
-    <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our modified dataset:</strong>
+    <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our benchmark dataset:</strong>
   <pre><code>
   『日本古典籍くずし字データセット』 （国文研所蔵／CODH加工） doi:10.20676/00000340      
   </code></pre>
@@ -234,7 +232,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            The original Kuzushiji dataset used in this work is based on the <strong>『日本古典籍くずし字データセット』</strong> （国文研所蔵／CODH加工）, provided by <a href="https://codh.rois.ac.jp/">ROIS-DS人文学オープンデータ共同利用センター(CODH)</a>
+            The original Kuzushiji dataset used in this work is based on the <strong>『日本古典籍くずし字データセット』</strong> （国文研所蔵／CODH加工）, provided by <a href="https://codh.rois.ac.jp/">ROIS-DS人文学オープンデータ共同利用センター(CODH)</a>,
             which is licensed under the<a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.
           </p>
 
