--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars">
-  <meta name="keywords" content="ToonifyGB, StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars, Rui-Yang Ju">
+        content="MFE-GAN">
+  <meta name="keywords" content="MFE-GAN, MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</title>
+  <title>MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
