--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -62,7 +62,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
-              <span>Sheng-Yen Huang</span>,
+              <a href="https://www.monash.edu.my/it/staff/academic/a-prof-wong-kok-sheik">KokSheik Wong</a>,
               <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>
             </span>
           </div>
