--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -70,7 +70,7 @@
 
           <div class="is-size-5 publication-authors" style="margin-top: 1em;">
             <span class="author-block">
-              Graduate Institute of Networking and Multimedia, National Taiwan University
+              Kyoto University, Monash University Malaysia, Rice University, Tamkang University
             </span>
           </div>
 
